--- a/packages/nextjs/package.json
+++ b/packages/nextjs/package.json
@@ -14,7 +14,9 @@
     "dead-exports": "ts-prune",
     "vercel": "vercel --build-env YARN_ENABLE_IMMUTABLE_INSTALLS=false --build-env ENABLE_EXPERIMENTAL_COREPACK=1 --build-env VERCEL_TELEMETRY_DISABLED=1",
     "vercel:login": "vercel login",
-    "vercel:yolo": "vercel --build-env YARN_ENABLE_IMMUTABLE_INSTALLS=false --build-env ENABLE_EXPERIMENTAL_COREPACK=1 --build-env NEXT_PUBLIC_IGNORE_BUILD_ERROR=true --build-env VERCEL_TELEMETRY_DISABLED=1"
+    "vercel:yolo": "vercel --build-env YARN_ENABLE_IMMUTABLE_INSTALLS=false --build-env ENABLE_EXPERIMENTAL_COREPACK=1 --build-env NEXT_PUBLIC_IGNORE_BUILD_ERROR=true --build-env VERCEL_TELEMETRY_DISABLED=1",
+    "test": "vitest run",
+    "test:watch": "vitest"
   },
   "dependencies": {
     "@heroicons/react": "~2.1.5",
@@ -65,7 +67,8 @@
     "ts-prune": "~0.10.3",
     "type-fest": "~4.26.1",
     "typescript": "~5.8.2",
-    "vercel": "~39.1.3"
+    "vercel": "~39.1.3",
+    "vitest": "~2.0.5"
   },
   "packageManager": "yarn@3.2.3"
 }
