fix: update CI workflow to work with Yarn v4
Remove -s flag from yarn command as it's not supported in Yarn v4.
Redirect stderr to stdout to capture all output from dead-exports check.

--- a/.github/workflows/lint.yaml
+++ b/.github/workflows/lint.yaml
@@ -41,6 +41,6 @@ jobs:
 
       - name: Check dead exports on nextjs
         run: |
-          DEAD=$(yarn -s workspace @se-2/nextjs dead-exports)
+          DEAD=$(yarn workspace @se-2/nextjs dead-exports 2>&1)
           echo "$DEAD"
           test -z "$DEAD"
